# devtools

./: .autorc  .bazelignore  .bazelrc  .editorconfig  .gitignore  .groovylintrc.json  .swiftlint.yml  .worktreeinclude  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Package.swift  README.md  REPO.bazel  WORKSPACE  codecov.yml  justfile  libs.versions.toml  maven-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  vitest.config.mts
.circleci/: config.yml
.claude/skills/ios-review/: SKILL.md
.github/: pull_request_template.md
android/demo/: BUILD  androidinstall.sh
android/demo/src/main/: AndroidManifest.xml
cli/: BUILD  package.json
cli/src/commands/dependency-versions/: check.ts
cli/src/commands/dsl/: compile.ts  validate.ts
cli/src/utils/: base-command.ts
cli/src/utils/xlr/visitors/: plugin.ts
devtools/: README.md
devtools/client/: BUILD  README.md  package.json
devtools/client/src/: index.ts
devtools/client/src/constants/: index.ts
devtools/client/src/panel/: index.tsx
devtools/client/src/plugins/: index.ts
devtools/client/src/state/: client.ts  index.ts  reducer.ts
devtools/client/src/state/__tests__/: reducer.test.ts
devtools/fancy/core/: BUILD  package.json
devtools/fancy/core/src/: index.ts
devtools/fancy/core/src/__tests__/: index.test.ts
devtools/fancy/ios/: BUILD
devtools/fancy/ios/Sources/: Fancy.swift
devtools/fancy/ios/Tests/: FancyTests.swift
devtools/flipper-plugin/: BUILD  package.json
devtools/flipper-plugin/src/: index.tsx
devtools/flipper-plugin/src/theme/: select.ts  table.ts
devtools/mcp/: BUILD  package.json
devtools/mcp/src/: index.ts  server.ts  transport.ts
devtools/mcp/src/tools/: flow.ts  index.ts  players.ts  plugins.ts  select.ts
devtools/messenger/: BUILD  README.md
devtools/messenger/core/: BUILD  package.json
devtools/messenger/core/src/: index.ts
devtools/messenger/ios/: BUILD
devtools/messenger/ios/Sources/: Messenger.swift  SharedMessengerLayer.swift
devtools/messenger/ios/Tests/: MessengerTests.swift
devtools/messenger/jvm/: BUILD
devtools/messenger/src/: index.ts
devtools/plugin/: README.md
devtools/plugin/android/: BUILD
devtools/plugin/core/: BUILD  package.json
devtools/plugin/core/src/: constants.ts  index.ts  plugin.ts  reducer.ts  state.ts
devtools/plugin/ios/: BUILD
devtools/plugin/ios/Sources/: AsynchronousIntervalManager.swift  BaseDevtoolsPlugin.swift  DevtoolsFlipperPlugin.swift  DevtoolsHandler.swift  DevtoolsPlayerPlugin.swift  DevtoolsPlugin.swift  PolyfillPlugin.swift  Store.swift
devtools/plugin/ios/ViewInspector/: DevtoolsPlayerPluginTests.swift  PolyfillPluginTests.swift
devtools/plugin/jvm/: BUILD
devtools/plugin/react/: BUILD  package.json
devtools/plugin/react/src/: WrapperComponent.tsx  index.ts  plugin.tsx  useCommunicationLayer.ts
devtools/plugin/swiftui/: BUILD
devtools/plugin/swiftui/Sources/: DevtoolsPlugin.swift
devtools/plugin/swiftui/ViewInspector/: DevtoolsPluginTests.swift
devtools/plugins/basic/android/: BUILD
devtools/plugins/basic/content/: BUILD  package.json
devtools/plugins/basic/core/: BUILD  package.json
devtools/plugins/basic/ios/: BUILD
devtools/plugins/basic/jvm/: BUILD
devtools/plugins/basic/react/: BUILD  package.json
devtools/plugins/basic/swiftui/: BUILD
devtools/plugins/desktop/: README.md
devtools/plugins/desktop/basic/: BUILD  README.md  package.json
devtools/plugins/desktop/common/: BUILD  README.md  package.json
devtools/plugins/desktop/profiler/: BUILD  README.md  package.json
devtools/plugins/desktop/template/: BUILD.hbs  package.json.hbs
devtools/plugins/desktop/test-env/: setup.sh
devtools/plugins/fancy/core/: BUILD  package.json
devtools/plugins/fancy/jvm/: BUILD
devtools/plugins/fancy/swiftui/: BUILD
devtools/plugins/mobile/flipper-desktop-client/: BUILD  README.md
devtools/plugins/profiler/core/: BUILD  package.json
devtools/plugins/profiler/ios/: BUILD
devtools/plugins/profiler/jvm/: BUILD
devtools/plugins/profiler/react/: BUILD  package.json
devtools/types/: BUILD  package.json
devtools/types/core/: BUILD
devtools/types/core/src/: index.ts
devtools/types/ios/: BUILD
devtools/types/ios/Sources/: BaseEvent.swift  InternalEvent.swift  MessengerOptions.swift  MessengerTransaction.swift  TransactionMetaData.swift
devtools/types/ios/Tests/: BaseEventTests.swift  MessengerOptionsTests.swift  TransactionMetaDataTests.swift
devtools/utils/core/: BUILD  package.json
devtools/utils/core/src/: index.ts
devtools/utils/ios/: BUILD
devtools/utils/ios/Sources/: JSExtensions.swift  JSValueExtensions.swift  SharedMessengerLayer.swift
devtools/utils/ios/Tests/: JSExtensionsTests.swift  JSValueExtensionsTests.swift
devtools/utils/swiftui/: BUILD
devtools/utils/swiftui/ViewInspector/: PolyfillPluginTests.swift
docs/storybook/: BUILD  package.json  vite.config.mts
docs/storybook/.storybook/: main.mts  preview.ts
docs/storybook/src/: Welcome.mdx
helpers/: BUILD  android.bzl  defs.bzl  ios.bzl  jvm.bzl  pom.tpl
helpers/migration/: make_asset.sh
helpers/mocks/: BUILD  package.json
helpers/release/: BUILD  delete-old-prerelease.js  discover-ios-targets.sh  next-changelogs.js  release.sh  validate-release-package.sh
helpers/scripts/: BUILD
ios/: BUILD  justfile
ios/demo/: BUILD  Package.resolved  Package.swift
ios/demo/Sources/: DemoApp.swift
ios/demo/Sources/Utils/: FlowManagerView.swift  PluginDemos.swift
mocks/: BUILD  package.json
mocks/action/: action-basic.tsx  action-counter.tsx
mocks/collection/: collection-basic.tsx
mocks/info/: info-basic.tsx
mocks/input/: input-basic.tsx
mocks/text/: text-basic.tsx
patches/: flipper-pkg-lib.patch
(+109 files in other folders)
