module(
    name = "devtools",
    version = "1.0",
)

bazel_dep(name = "rules_player")
archive_override(
    module_name = "rules_player",
    integrity = "sha256-90jZ8zCyOrUIwYMPH5kb4renSuDeZQ8vXciKhYC7khM=",
    strip_prefix = "rules_player-2.1.1",
    urls = ["https://github.com/player-ui/rules_player/archive/refs/tags/v2.1.1.tar.gz"],
)

bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.6.3")

####### Node.js version #########
bazel_dep(name = "rules_nodejs", version = "6.4.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.15.1")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
    ],
    npm_package_target_name = "{dirname}",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")
###### End node.js ######

###### Start iOS ######
## Rule Dependencies
bazel_dep(name = "rules_xcodeproj", version = "2.12.1")
bazel_dep(name = "rules_apple", version = "4.1.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "2.9.0")
bazel_dep(name = "rules_swift_package_manager", version = "1.3.0")
bazel_dep(name = "swiftlint", version = "0.59.1", repo_name = "SwiftLint")

## This section is handled by rules_swift_package_manager
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:ios/demo/Package.resolved",
    swift = "//:ios/demo/Package.swift",
)

# Run `bazel mod tidy` to update this list automatically.
# If it's not updating automatically, try deleting the MODULE.bazel.lock.
# If that doesn't work, you can add things manually.
# For example, if you use PlayerUI, you can add it like this:
# "swiftpkg_playerui_swift_package"
use_repo(
    swift_deps,
    "swift_package",  # Not sure what this is for, but it is required
    "swiftpkg_playerui_swift_package",
    "swiftpkg_swift_hooks",
    "swiftpkg_swiftflipper",
    "swiftpkg_swiftlint",
    "swiftpkg_viewinspector",
)

###### End iOS ######

###### Start Shell ######
sh_config_ext = use_extension("@rules_player//shell:defs.bzl", "sh_configure")
use_repo(sh_config_ext, "local_shell_config")

register_toolchains("@local_shell_config//:local_sh_toolchain")

###### End Shell ######

#### Kotlin/MVM/Android
build_constants = use_repo_rule("@rules_player//distribution:defs.bzl", "build_constants")

build_constants(
    name = "build_constants",
    constants = {
        "GROUP": "com.intuit.playerui.devtools",
    },
    version_file = "//:VERSION",
)

bazel_dep(name = "rules_jvm_external", version = "6.8")

# Override for AAR publishing support
git_override(
    module_name = "rules_jvm_external",
    # branch = "maven-export-aar-6.8",
    commit = "0dc1a97c0403de02e0bf9a03244212a15dae3333",
    remote = "https://github.com/sugarmanz/rules_jvm_external.git",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.from_toml(
    bom_modules = [
        "org.junit:junit-bom",
        "androidx.compose:compose-bom",
    ],
    libs_versions_toml = "//:libs.versions.toml",
)
maven.amend_artifact(
    coordinates = "com.intuit.playerui:testutils",
    exclusions = [
        "com.intuit.playerui:hermes",
    ],
)
maven.amend_artifact(
    coordinates = "com.facebook.flipper:flipper",
    exclusions = [
        # TODO: Try to override
        "com.android.ndk.thirdparty:openssl",
    ],
)
maven.install(
    fetch_sources = True,
    known_contributing_modules = [
        "bazel_worker_java",
        "devtools",
    ],
    lock_file = "//:maven-lock.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
    ],
    version_conflict_policy = "pinned",
)

# maven.override(
#     name = "maven",
#     coordinates = "com.android.ndk.thirdparty:openssl",
#     target = "@maven//:com.android.ndk.thirdparty:openssl",
# )
use_repo(maven, "maven")

bazel_dep(name = "rules_kotlin", version = "2.1.8")

register_toolchains("//helpers:kotlin_toolchain")

bazel_dep(name = "rules_android", version = "0.6.5")
archive_override(
    module_name = "rules_android", 
    urls = ["https://github.com/bazelbuild/rules_android/releases/download/v0.6.5/rules_android-v0.6.5.tar.gz"],
    integrity = "sha256-WlGCx0go2lMWUiGYc5UmTUpc7owQwXF4oNXhI7vRYjw=",
    strip_prefix = "rules_android-0.6.5",
    patches = ["//patches:rules_android.mirror.patch"],
)
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# Overridden for https://github.com/bazelbuild/rules_android_ndk/pull/63
git_override(
    module_name = "rules_android_ndk",
    commit = "3377db4d8306363b4a4ce65aa678814dd90e4ee6",
    remote = "https://github.com/sugarmanz/rules_android_ndk.git",
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

bazel_dep(name = "rules_robolectric", version = "4.15.1")
